2013-08-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_common.php: fixed PHP
	warnings.

2013-08-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_common.php: fixed the PHP
	warnings.

2013-08-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/modificar_agente.php,
	include/functions_snmp_browser.php, include/functions_api.php: fixed
	PHP warnings and PHP notices.

2013-08-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/servers/servers.build_table.php, include/functions_db.php,
	include/functions_servers.php, index.php: improved the source code
	style.
	
	* include/functions_api.php: added the call to update the agent.

2013-08-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: added calls to set gis data for agent
	"set/gis_agent_only_position" and "set/gis_agent", and for to get
	gis data "get/gis_agent".
	
	* include/functions_agents.php: added function "agents_update_gis".

2013-08-19 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Small Fix. Corrected error message.

	MERGED FROM branch4.x

2013-08-19 Miguel de Dios <miguel.dedios@artica.es>
	
	* general/logon_ok.php, godmode/setup/news.php: fixed the lost
	"<br>" in the news.
	
	Fixes: #2380

2013-08-19 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/agentes/module_manager_editor.php,
	godmode/agentes/agent_manager.php,
	godmode/agentes/modificar_agente.php,
	include/functions_agents.php,
	include/functions_modules.php: Added missing enterprise_hook()
	wrapper calls.

	MERGED FROM branch4.x

2013-08-16 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/pandora_logs.php: fixed the translation the human
	size of php memory limit to bytes size limit.

2013-08-16 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/ajax/module.php, include/javascript/pandora_modules.js: